--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "moment": "^2.29.4",
+    "moment-range": "^4.0.2",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "stripe": "^12.11.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
